# Phoenix

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt  application.c  application.h  vulfEngine.h
engine/collections/: arrayList.c  arrayList.h  collections.h  collectionsCommon.h  common.h  hashMap.c  hashMap.h  linkedList.c  linkedList.h
engine/core/: core.h  input.c  input.h  logger.c  logger.h  memory.c  memory.h  resources.h  signalHandler.c  signalHandler.h  types.h  vtime.c  vtime.h  window.c  window.h
engine/gfx/: colors.h  gfx.h  renderer.c  renderer.h
phoenix/: CMakeLists.txt  constants.h  main.c  phoenix.c  phoenix.h
tests/: CMakeLists.txt
tests/collections/: CMakeLists.txt  test_arrayList.c
tests/collections/arrayList/: CMakeLists.txt
